Fixed bug with footer on Safari

--- a/style.css
+++ b/style.css
@@ -1,24 +1,23 @@
 html {
     min-width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
-    font-family: Roboto;
+    font-family: Arial;
     background-color: white;
     background-image: url("Images/Initial/background.jpg");
     background-size: cover;
-    z-index: -1;
+    background-attachment: fixed;
 }
 
 body {
     margin: inherit;
     width: inherit;
-    height: inherit;
+    min-height: inherit;
     display: flex;
     flex-direction: column;
 }
 
 header {
-    padding: 5px;
     margin: inherit;
     width: inherit;
 }
@@ -28,7 +27,6 @@ header {
     flex-direction: row;
     width: 100%;
     background-color: #fc0;
-    border-radius: 5px;
     box-shadow: 0 5px 10px -5px black;
 }
 
@@ -72,19 +70,21 @@ header {
 
 .mainContainer {
     width: inherit;
+    min-height: min-content;
     padding: 10px;
     display: flex;
+    display: -webkit-flex;
     flex-direction: row;
     flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
     flex: 1 0 33%;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .menuItem {
     border-radius: 10px;
     box-shadow: 0 5px 10px -5px black;
     margin: 0.5em 0;
-    min-width: 20em;
     max-width: 25em;
     height: min-content;
 }
@@ -138,19 +138,22 @@ header {
 }
 
 footer {
-    padding: 5px;
-    margin-top: auto;
+    position: relative;
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
     justify-content: flex-end;
+    margin-top: auto;
+    margin-bottom: 0;
+    flex-shrink: 0;
 }
 
 .footerContainer {
+    display: -webkit-flex;
     display: flex;
     flex-direction: row;
     width: inherit;
     background-color: #fc0;
-    border-radius: 5px;
     padding: 5px 10px;
 }
 
